fix: hide the scrollbars of code and symbol blocks if there is no scroll inside the block

--- a/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/code-block/styles.scss
+++ b/dokka-subprojects/plugin-base-frontend/src/main/ui-kit/code-block/styles.scss
@@ -10,7 +10,7 @@ http://localhost:8001/jvm/org.jetbrains.dokka.uitest.markdown/-markdown-code/ind
   position: relative;
 
   display: block;
-  overflow: scroll;
+  overflow: auto;
 
   box-sizing: border-box;
   padding: 12px 16px;
